@@ -351,7 +351,7 @@ public class PropertiesFileFlowDefinitionParser implements DataflowDefinitionPar
 
     private String getTrimmedProperty(final Map<String, String> properties, final String propertyName) {
         final String propertyValue = properties.get(propertyName);
-        return (propertyValue == null || propertyValue.trim().isEmpty()) ? null : propertyValue.trim();
+        return (propertyValue == null || propertyValue.isBlank()) ? null : propertyValue.trim();
     }
 
     private Long getLongProperty(final Map<String, String> properties, final String propertyName) {
@@ -404,7 +404,7 @@ public class PropertiesFileFlowDefinitionParser implements DataflowDefinitionPar
                 logger.warn("Found property with name <{}>. This property name contains leading or trailing white space, which may not be intended.", key);
             }
 
-            if (!value.trim().equals(value) && !value.trim().isEmpty()) {
+            if (!value.trim().equals(value) && !value.isBlank()) {
                 // If value consists only of white space, don't worry about it. But if the value consists of non-white-space characters but has leading or trailing white space
                 // it may be cause for concern.
                 logger.warn("Found property with name <{}> and value <{}>. This property value contains leading or trailing white space, which may not be intended.", key, value);
@@ -485,7 +485,7 @@ public class PropertiesFileFlowDefinitionParser implements DataflowDefinitionPar
         throws IOException, StatelessConfigurationException {
 
         final String flowSnapshotFilename = properties.get(FLOW_SNAPSHOT_FILE_KEY);
-        if (flowSnapshotFilename != null && !flowSnapshotFilename.trim().isEmpty()) {
+        if (flowSnapshotFilename != null && !flowSnapshotFilename.isBlank()) {
             final File flowSnapshotFile = new File(flowSnapshotFilename.trim());
             try {
                 return readVersionedFlowSnapshot(flowSnapshotFile);
@@ -496,7 +496,7 @@ public class PropertiesFileFlowDefinitionParser implements DataflowDefinitionPar
         }
 
         final String flowSnapshotUrl = properties.get(FLOW_SNAPSHOT_URL_KEY);
-        if (flowSnapshotUrl != null && !flowSnapshotUrl.trim().isEmpty()) {
+        if (flowSnapshotUrl != null && !flowSnapshotUrl.isBlank()) {
             final String useSslPropertyValue = properties.get(FLOW_SNAPSHOT_URL_USE_SSLCONTEXT_KEY);
             final boolean useSsl = Boolean.parseBoolean(useSslPropertyValue);
 
@@ -508,7 +508,7 @@ public class PropertiesFileFlowDefinitionParser implements DataflowDefinitionPar
         }
 
         final String flowContents = properties.get(FLOW_SNAPSHOT_CONTENTS_KEY);
-        if (flowContents != null && !flowContents.trim().isEmpty()) {
+        if (flowContents != null && !flowContents.isBlank()) {
             final byte[] flowContentsBytes = flowContents.getBytes(StandardCharsets.UTF_8);
 
             try (final InputStream in = new ByteArrayInputStream(flowContentsBytes)) {
@@ -544,7 +544,7 @@ public class PropertiesFileFlowDefinitionParser implements DataflowDefinitionPar
     }
 
     private boolean isEmpty(final String value) {
-        return value == null || value.trim().isEmpty();
+        return value == null || value.isBlank();
     }
 
     private VersionedFlowSnapshot fetchFlowFromUrl(final String url, final SslContextDefinition sslContextDefinition) throws IOException {
